--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
   </head>
   <body>
     <main class="grid">
-      <div class="grid__item grid__item" tabindex="0"  onclick="play('cat')">
+      <div class="grid__item grid__item" tabindex="0"  onfocus="play('cat')">
         <img src="cat.svg">
       </div>
-      <div class="grid__item grid__item" tabindex="0" onclick="play('bird')">
+      <div class="grid__item grid__item" tabindex="0" onfocus="play('bird')">
         <img src="bird.svg">
       </div>
-      <div class="grid__item grid__item" tabindex="0" onclick="play('dog')">
+      <div class="grid__item grid__item" tabindex="0" onfocus="play('dog')">
         <img src="dog.svg">
       </div>
-      <div class="grid__item grid__item" tabindex="0" onclick="play('duck')">
+      <div class="grid__item grid__item" tabindex="0" onfocus="play('duck')">
         <img src="duck.svg">
       </div>
     </main>
